# Bewise-Test-Task

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 001_init.py
questions_task/: database.py  main.py  utils.py
questions_task/questions/: crud.py  models.py  routers.py  schemas.py  utils.py
